# holo-wtf-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: docker-publish.yml  rust.yml
src/: main.rs
src/calendar/: calendar_parser.rs  mod.rs  models.rs
