[package]
name = "holo-wtf-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
icalendar = { version = "*", features = ["serde"] }
url = { version = "*", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "*", features = ["clock", "serde"] }
chrono-tz = "*"
regex = "*"
log = "*"
uuid = { version = "*", features = ["v4", "fast-rng", "serde"] }
